--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
+<a href="https://www.lr.edu/academics/registrar/academic-calendars">Academic Calendars</a>
 <a href="https://eclipse.gsfc.nasa.gov/JSEX/JSEX-NA.html">nasa eclipse website</a>
