--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-<a href="https://www.lr.edu/academics/registrar/academic-calendars">Academic Calendars</a>
-<a href="https://eclipse.gsfc.nasa.gov/JSEX/JSEX-NA.html">nasa eclipse website</a>
+<table>
+  <thead>
+    <tr>
+      <th>Link</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <a href="https://www.lr.edu/academics/registrar/academic-calendars">Academic Calendars</a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <a href="https://eclipse.gsfc.nasa.gov/JSEX/JSEX-NA.html">nasa eclipse website</a>
+
+        
+      </td>
+    </tr>
+  </tbody>
+</table>
