--- a/index.html
+++ b/index.html
@@ -1,21 +1,4 @@
-<table>
-  <thead>
-    <tr>
-      <th>Link</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        <a href="https://www.lr.edu/academics/registrar/academic-calendars">Academic Calendars</a>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <a href="https://eclipse.gsfc.nasa.gov/JSEX/JSEX-NA.html">nasa eclipse website</a>
-
-        
-      </td>
-    </tr>
-  </tbody>
-</table>
+<pre>
+<a href="https://www.lr.edu/academics/registrar/academic-calendars">Academic Calendars</a>
+<a href="https://eclipse.gsfc.nasa.gov/JSEX/JSEX-NA.html">nasa eclipse website</a>
+</pre>
