--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <pre>
+<a href="https://www.lr.edu/">Lenoir-Rhyne University</a>
 <a href="https://www.lr.edu/academics/registrar/academic-calendars">Academic Calendars</a>
 <a href="https://eclipse.gsfc.nasa.gov/JSEX/JSEX-NA.html">nasa eclipse website</a>
 </pre>
